--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-left: 30px;
+  flex-direction: column;
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  color:saddlebrown
 }
 
-.App-link {
-  color: #61dafb;
+.company {
+  font-size: 30px;
+  font-style: italic;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBox {
+  margin-top: 10px;
+  width: 350px;
+  height: 50px;
+  font-size: 18px;
+  padding-left: 10px;
 }
+
+
+.typeName {
+  padding-left: 60px;
+  color:seagreen;
+  font-size: 20px;
+}
+p {
+  margin: 15px;
+  font-size: 23px;
+}
+
+
